--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="info-content">
                 <h1 class="name" title="RAZ Creation">RAZ Creation</h1>
 
-                <p class="title">Hacker</p>
+                <p class="title">IT Solution</p>
             </div>
 
             <button class="info_more-btn" data-sidebar-btn>
@@ -143,7 +143,7 @@
                 </li>
 
                 <li class="navbar-item">
-                    <button class="navbar-link" data-nav-link>Hacking</button>
+                    <button class="navbar-link" data-nav-link>Security</button>
                 </li>
 
                 <li class="navbar-item">
